[gd_scene load_steps=27 format=3 uid="uid://d4bxmkgjuxpr4"]

[ext_resource type="Script" path="res://player/Player.gd" id="1_lidto"]
[ext_resource type="Script" path="res://addons/smoothing/smoothing.gd" id="2_3eixf"]
[ext_resource type="Script" path="res://player/LazyFollow.gd" id="3_8jneo"]
[ext_resource type="Script" path="res://player/Visuals.gd" id="4_cbrol"]
[ext_resource type="Texture2D" uid="uid://bcm66sohtbqsc" path="res://assets/textures/ui_toppanel.png" id="5_4qe50"]
[ext_resource type="Script" path="res://player/DataTracker.gd" id="6_god2y"]
[ext_resource type="Texture2D" uid="uid://cwgc53jny6ufj" path="res://assets/textures/crosshair.svg" id="7_d17di"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_r0s83"]
friction = 0.0

[sub_resource type="GDScript" id="GDScript_m4eab"]
script/source = "extends Node

@export var head: Node3D
@export var fps_camera: Camera3D
@export var tps_camera: Camera3D

@export var death_player: AnimationPlayer

@export var smoothing_nodes: Array[Smoothing]
"

[sub_resource type="CylinderShape3D" id="CylinderShape3D_64cf0"]
radius = 0.36

[sub_resource type="CylinderMesh" id="CylinderMesh_w8xdq"]
top_radius = 0.0
bottom_radius = 0.035
height = 0.8
radial_segments = 4

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_jg8oh"]

[sub_resource type="BoxMesh" id="BoxMesh_t06nd"]
size = Vector3(0.522, 0.294, 0.266)

[sub_resource type="BoxMesh" id="BoxMesh_ibbvn"]
size = Vector3(0.473, 0.325, 0.245)

[sub_resource type="BoxMesh" id="BoxMesh_jahkv"]
size = Vector3(0.2, 0.822, 0.2)

[sub_resource type="BoxMesh" id="BoxMesh_5lvof"]
size = Vector3(0.142, 0.853, 0.2)

[sub_resource type="BoxMesh" id="BoxMesh_l7dxn"]
size = Vector3(0.309, 0.397, 0.305)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fxoom"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g1f1c"]
content_margin_left = 16.0
texture = ExtResource("5_4qe50")
texture_margin_left = 16.0
texture_margin_right = 64.0
region_rect = Rect2(0, 0, 256, 64)

[sub_resource type="GDScript" id="GDScript_mr14b"]
script/source = "extends Label

var _frames := 0
var _time := 0.0

func _process(delta: float) -> void:
	_time += delta
	_frames += 1
	if _time > 1.0:
		var s := get_viewport_rect().size
		print(\"Screen is %dx%d\" % [s.x, s.y])
		text = \"FPS: %3d (%.8f mspf)\" % [_frames, _time / _frames]
		_time -= 1.0
		_frames = 0
"

[sub_resource type="Animation" id="Animation_c535t"]
resource_name = "RESET"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeathLayer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_epk1q"]
resource_name = "death_flash"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeathLayer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2.07052, 1),
"update": 0,
"values": [Color(1, 0, 0, 0.317647), Color(1, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qmbgo"]
_data = {
"RESET": SubResource("Animation_c535t"),
"death_flash": SubResource("Animation_epk1q")
}

[sub_resource type="CylinderShape3D" id="CylinderShape3D_7wism"]
height = 0.125
radius = 0.325

[sub_resource type="CylinderShape3D" id="CylinderShape3D_dn0g8"]
height = 1.9
radius = 0.360455

[sub_resource type="CylinderShape3D" id="CylinderShape3D_6xqgi"]
height = 1.8
radius = 0.36

[node name="Player" type="RigidBody3D"]
collision_layer = 4
collision_mask = 255
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
mass = 80.0
physics_material_override = SubResource("PhysicsMaterial_r0s83")
custom_integrator = true
continuous_cd = true
lock_rotation = true
script = ExtResource("1_lidto")

[node name="References" type="Node" parent="." node_paths=PackedStringArray("head", "fps_camera", "tps_camera", "death_player", "smoothing_nodes")]
script = SubResource("GDScript_m4eab")
head = NodePath("../Head")
fps_camera = NodePath("../Smoothing/FirstPersonCamera/Camera")
tps_camera = NodePath("../SmoothedVisuals/3rdPersonCamera/SpringArm/Camera")
death_player = NodePath("../GUI/DeathPlayer")
smoothing_nodes = [NodePath("../Smoothing"), NodePath("../SmoothedVisuals"), NodePath("../Head/Smoothing")]

[node name="CapsuleShape" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_64cf0")

[node name="Smoothing" type="Node3D" parent="."]
script = ExtResource("2_3eixf")
target = NodePath("..")
flags = 3

[node name="FirstPersonCamera" type="Node3D" parent="Smoothing"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.823574, 0)

[node name="Camera" type="Camera3D" parent="Smoothing/FirstPersonCamera"]
cull_mask = 1047551
current = true

[node name="DebugVisual" type="MeshInstance3D" parent="Smoothing/FirstPersonCamera/Camera"]
transform = Transform3D(0.707107, 1.28028e-08, 0.707107, 0.707107, -3.09086e-08, -0.707107, 1.28028e-08, 1, -3.09086e-08, 0, 0, -0.390881)
layers = 1024
mesh = SubResource("CylinderMesh_w8xdq")

[node name="SmoothedVisuals" type="Node3D" parent="."]
script = ExtResource("2_3eixf")

[node name="3rdPersonCamera" type="Node3D" parent="SmoothedVisuals" node_paths=PackedStringArray("follow")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.746158, 0.0364608)
top_level = true
script = ExtResource("3_8jneo")
follow = NodePath("../../Head")
rotation_follow_speed = 20.0

[node name="SpringArm" type="SpringArm3D" parent="SmoothedVisuals/3rdPersonCamera"]
transform = Transform3D(1, 0, 0, 0, 0.999925, -0.012217, 0, 0.012217, 0.999925, 0, 0.694599, -0.0364608)
collision_mask = 251
shape = SubResource("SeparationRayShape3D_jg8oh")
spring_length = 2.5

[node name="Camera" type="Camera3D" parent="SmoothedVisuals/3rdPersonCamera/SpringArm"]
transform = Transform3D(1, 0, 0, 0, 0.969872, 0.243615, 0, -0.243615, 0.969872, 0, 0, 2.486)

[node name="Visuals" type="Node3D" parent="SmoothedVisuals"]
script = ExtResource("4_cbrol")

[node name="Torso" type="MeshInstance3D" parent="SmoothedVisuals/Visuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.327542, 0)
layers = 1024
gi_mode = 2
mesh = SubResource("BoxMesh_t06nd")
skeleton = NodePath("../../..")

[node name="Torso2" type="MeshInstance3D" parent="SmoothedVisuals/Visuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0168054, 0.0090118)
layers = 1024
gi_mode = 2
mesh = SubResource("BoxMesh_ibbvn")
skeleton = NodePath("../../..")

[node name="LegR" type="Node3D" parent="SmoothedVisuals/Visuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.124, -0.174, 0)

[node name="Mesh" type="MeshInstance3D" parent="SmoothedVisuals/Visuals/LegR"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.413494, 0)
layers = 1024
gi_mode = 2
mesh = SubResource("BoxMesh_jahkv")
skeleton = NodePath("../../../..")

[node name="LegL" type="Node3D" parent="SmoothedVisuals/Visuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.123795, -0.173594, 0)

[node name="Mesh" type="MeshInstance3D" parent="SmoothedVisuals/Visuals/LegL"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.413494, 0)
layers = 1024
gi_mode = 2
mesh = SubResource("BoxMesh_jahkv")
skeleton = NodePath("../../../..")

[node name="ArmR" type="Node3D" parent="SmoothedVisuals/Visuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.358103, 0.381739, 0)

[node name="Mesh" type="MeshInstance3D" parent="SmoothedVisuals/Visuals/ArmR"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.337617, 0)
layers = 1024
gi_mode = 2
mesh = SubResource("BoxMesh_5lvof")
skeleton = NodePath("../../../..")

[node name="ArmL" type="Node3D" parent="SmoothedVisuals/Visuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.358, 0.382, 0)

[node name="Mesh" type="MeshInstance3D" parent="SmoothedVisuals/Visuals/ArmL"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.337617, 0)
layers = 1024
gi_mode = 2
mesh = SubResource("BoxMesh_5lvof")
skeleton = NodePath("../../../..")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.579376, 0)

[node name="Smoothing" type="Node3D" parent="Head"]
script = ExtResource("2_3eixf")

[node name="Mesh" type="MeshInstance3D" parent="Head/Smoothing"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.152, -0.036)
layers = 1024
gi_mode = 2
mesh = SubResource("BoxMesh_l7dxn")
skeleton = NodePath("../../..")

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DeathLayer" type="Panel" parent="GUI"]
modulate = Color(1, 0, 0, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fxoom")

[node name="TopBarGUI" type="PanelContainer" parent="GUI"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.4
offset_left = 8.0
offset_top = 8.0
offset_right = 114.0
offset_bottom = 65.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_g1f1c")

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/TopBarGUI"]
layout_mode = 2

[node name="Label" type="Label" parent="GUI/TopBarGUI/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 21
text = "FPS:"
script = SubResource("GDScript_mr14b")

[node name="Label2" type="Label" parent="GUI/TopBarGUI/VBoxContainer" node_paths=PackedStringArray("target")]
layout_mode = 2
script = ExtResource("6_god2y")
target = NodePath("../../../..")
properties = Array[String](["linear_velocity", "_is_on_floor"])
format_string = "Velocity: %v
Is Grounded: %s"

[node name="DeathPlayer" type="AnimationPlayer" parent="GUI"]
libraries = {
"": SubResource("AnimationLibrary_qmbgo")
}

[node name="TextureRect" type="TextureRect" parent="GUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_d17di")
expand_mode = 2

[node name="FloorCast" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.9, 0)
shape = SubResource("CylinderShape3D_7wism")
target_position = Vector3(0, -0.075, 0)
debug_shape_custom_color = Color(0.180392, 0.439216, 0.12549, 1)

[node name="StairCast" type="ShapeCast3D" parent="."]
shape = SubResource("CylinderShape3D_dn0g8")
target_position = Vector3(0, 0, -0.2)
debug_shape_custom_color = Color(0.976471, 0.403922, 0, 1)

[node name="WallCast" type="ShapeCast3D" parent="."]
visible = false
enabled = false
shape = SubResource("CylinderShape3D_6xqgi")
target_position = Vector3(0, 0, 0)
debug_shape_custom_color = Color(0.858824, 0.0745098, 0.72549, 1)
